Drive in WordPress 1.

--- a/lib/templates/Languages.php.erb
+++ b/lib/templates/Languages.php.erb
@@ -4,7 +4,7 @@ namespace WpSyntaxHighlighter;
 
 class Languages {
 
-  public $names = [
+  static public $names = [
 <% languages.each do |language| -%>
     '<%= language -%>',
 <% end -%>
