Improved the defaults

--- a/css/codepen-embed.css
+++ b/css/codepen-embed.css
@@ -7,7 +7,7 @@
 .hljs {
   display: block;
   padding: 0.5em;
-  /*background: #222;*/
+  background: #222;
   color: #fff;
   font-family: Menlo, Monaco, 'Andale Mono', 'Lucida Console', 'Courier New', monospace;
 }
