Updates Highlight.js themes

--- a/css/kimbie.dark.css
+++ b/css/kimbie.dark.css
@@ -55,7 +55,7 @@
 
 /* Kimbie Aqua */
 .css .hljs-hexcolor {
-  color:: #088649;
+  color: #088649;
 }
 
 /* Kimbie Blue */
@@ -78,9 +78,11 @@
 
 .hljs {
   display: block;
+  overflow-x: auto;
   background: #221a0f;
   color: #d3af86;
   padding: 0.5em;
+  -webkit-text-size-adjust: none;
 }
 
 .coffeescript .javascript,
