--- a/css/kimbie.light.css
+++ b/css/kimbie.light.css
@@ -78,9 +78,11 @@
 
 .hljs {
   display: block;
+  overflow-x: auto;
   background: #fbebd4;
   color: #84613d;
   padding: 0.5em;
+  -webkit-text-size-adjust: none;
 }
 
 .coffeescript .javascript,
