--- a/css/far.css
+++ b/css/far.css
@@ -6,8 +6,10 @@ FAR Style (c) MajestiC <majestic2k@gmail.com>
 
 .hljs {
   display: block;
+  overflow-x: auto;
   padding: 0.5em;
   background: #000080;
+  -webkit-text-size-adjust: none;
 }
 
 .hljs,
@@ -41,7 +43,7 @@ FAR Style (c) MajestiC <majestic2k@gmail.com>
 .hljs-keyword,
 .css .hljs-id,
 .hljs-title,
-.haskell .hljs-type,
+.hljs-type,
 .vbscript .hljs-built_in,
 .rsl .hljs-built_in,
 .smalltalk .hljs-class,
@@ -59,7 +61,7 @@ FAR Style (c) MajestiC <majestic2k@gmail.com>
 .hljs-comment,
 .hljs-phpdoc,
 .hljs-javadoc,
-.java .hljs-annotation,
+.hljs-annotation,
 .hljs-template_comment,
 .hljs-deletion,
 .apache .hljs-sqbracket,
@@ -77,7 +79,7 @@ FAR Style (c) MajestiC <majestic2k@gmail.com>
   color: #0f0;
 }
 
-.python .hljs-decorator,
+.hljs-decorator,
 .django .hljs-filter .hljs-argument,
 .smalltalk .hljs-localvars,
 .smalltalk .hljs-array,
@@ -95,7 +97,7 @@ FAR Style (c) MajestiC <majestic2k@gmail.com>
 .hljs-keyword,
 .css .hljs-id,
 .hljs-title,
-.haskell .hljs-type,
+.hljs-type,
 .vbscript .hljs-built_in,
 .rsl .hljs-built_in,
 .smalltalk .hljs-class,
