--- a/css/github.css
+++ b/css/github.css
@@ -6,9 +6,11 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 .hljs {
   display: block;
+  overflow-x: auto;
   padding: 0.5em;
   color: #333;
   background: #f8f8f8;
+  -webkit-text-size-adjust: none;
 }
 
 .hljs-comment,
@@ -34,7 +36,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-number,
 .hljs-hexcolor,
 .ruby .hljs-constant {
-  color: #099;
+  color: #008080;
 }
 
 .hljs-string,
@@ -46,7 +48,6 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 .hljs-title,
 .hljs-id,
-.coffeescript .hljs-params,
 .scss .hljs-preprocessor {
   color: #900;
   font-weight: bold;
@@ -60,7 +61,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 }
 
 .hljs-class .hljs-title,
-.haskell .hljs-type,
+.hljs-type,
 .vhdl .hljs-literal,
 .tex .hljs-command {
   color: #458;
