--- a/css/solarized_light.css
+++ b/css/solarized_light.css
@@ -1,8 +1,6 @@
 /*
 
-Pojoaque Style by Jason Tate
-http://web-cms-designs.com/ftopict-10-pojoaque-style-for-highlight-js-code-highlighter.html
-Based on Solarized Style from http://ethanschoonover.com/solarized
+Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmail.com>
 
 */
 
@@ -10,8 +8,8 @@ Based on Solarized Style from http://ethanschoonover.com/solarized
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #dccf8f;
-  background: url(./pojoaque.jpg) repeat scroll left top #181914;
+  background: #fdf6e3;
+  color: #657b83;
   -webkit-text-size-adjust: none;
 }
 
@@ -19,48 +17,52 @@ Based on Solarized Style from http://ethanschoonover.com/solarized
 .hljs-template_comment,
 .diff .hljs-header,
 .hljs-doctype,
+.hljs-pi,
 .lisp .hljs-string,
 .hljs-javadoc {
-  color: #586e75;
-  font-style: italic;
+  color: #93a1a1;
 }
 
+/* Solarized Green */
 .hljs-keyword,
-.css .rule .hljs-keyword,
 .hljs-winutils,
-.javascript .hljs-title,
 .method,
 .hljs-addition,
 .css .hljs-tag,
-.clojure .hljs-title,
+.hljs-request,
+.hljs-status,
 .nginx .hljs-title {
-  color: #b64926;
+  color: #859900;
 }
 
+/* Solarized Cyan */
 .hljs-number,
 .hljs-command,
 .hljs-string,
 .hljs-tag .hljs-value,
+.hljs-rules .hljs-value,
 .hljs-phpdoc,
 .tex .hljs-formula,
 .hljs-regexp,
-.hljs-hexcolor {
-  color: #468966;
+.hljs-hexcolor,
+.hljs-link_url {
+  color: #2aa198;
 }
 
+/* Solarized Blue */
 .hljs-title,
 .hljs-localvars,
-.hljs-function .hljs-title,
 .hljs-chunk,
 .hljs-decorator,
 .hljs-built_in,
-.lisp .hljs-title,
-.clojure .hljs-built_in,
 .hljs-identifier,
-.hljs-id {
-  color: #ffb03b;
+.vhdl .hljs-literal,
+.hljs-id,
+.css .hljs-function {
+  color: #268bd2;
 }
 
+/* Solarized Yellow */
 .hljs-attribute,
 .hljs-variable,
 .lisp .hljs-body,
@@ -68,42 +70,40 @@ Based on Solarized Style from http://ethanschoonover.com/solarized
 .hljs-constant,
 .hljs-class .hljs-title,
 .hljs-parent,
-.hljs-type {
+.hljs-type,
+.hljs-link_reference {
   color: #b58900;
 }
 
-.css .hljs-attribute {
-  color: #b89859;
-}
-
-.css .hljs-number,
-.css .hljs-hexcolor {
-  color: #dccf8f;
-}
-
-.css .hljs-class {
-  color: #d3a60c;
-}
-
+/* Solarized Orange */
 .hljs-preprocessor,
+.hljs-preprocessor .hljs-keyword,
 .hljs-pragma,
-.hljs-pi,
 .hljs-shebang,
 .hljs-symbol,
 .hljs-symbol .hljs-string,
 .diff .hljs-change,
 .hljs-special,
 .hljs-attr_selector,
-.hljs-important,
 .hljs-subst,
-.hljs-cdata {
+.hljs-cdata,
+.clojure .hljs-title,
+.css .hljs-pseudo,
+.hljs-header {
   color: #cb4b16;
 }
 
-.hljs-deletion {
+/* Solarized Red */
+.hljs-deletion,
+.hljs-important {
   color: #dc322f;
 }
 
+/* Solarized Violet */
+.hljs-link_label {
+  color: #6c71c4;
+}
+
 .tex .hljs-formula {
-  background: #073642;
+  background: #eee8d5;
 }
